2001-10-12  Daniel Jacobowitz  <drow@mvista.com>

	* printcmd.c (print_frame_args):  Move symbol iteration explicitly
	inside the func != NULL block.

2001-10-12  Fernando Nasser  <fnasser@redhat.com>

	* MAINTAINERS (Misc): Add Ian Roxborough as tcl/, tk/ and itcl/
	maintainer.

2001-10-12  Pierre Muller  <muller@ics.u-strasbg.fr>

	* config/i386/tm-cygwin.h: include tm-i386.h instead of tm-i386v.h.
	This fixes errors in "long long" handling for 'finish' and 'return'
	commands.

2001-10-12  Christopher Faylor  <cgf@redhat.com>

	* win32-nat.c (safe_symbol_file_add_stub): Avoid adding a shared
	library if it has already been loaded.
	(safe_symbol_file_add_cleanup): Don't mess with stderr or we won't see
	any error messages.
	(safe_symbol_file_add): Ditto.
	(solib_symbols_add): Make static.  Accept 'from_tty' parameter.  Pass
	it to safe_symbol_file_add.
	(core_dll_symbols_add): Accomodate extra solib_symbols_add parameter.
	(child_solib_add): Ditto.

	* win32-nat.c (handle_exception): Don't print "first chance"
	exceptions.
	(get_child_debug_event): Continue from exceptions if !handle_exception.

2001-10-11  Tom Tromey  <tromey@redhat.com>

	* symtab.c (lookup_symtab): Removed.
	(lookup_symtab_1): Renamed to lookup_symtab.

2001-10-10  Christopher Faylor  <cgf@redhat.com>

	* win32-nat.c (get_child_debug_event): Close file handles created after
	process creation and DLL load.
	(child_create_inferior): Close unneeded process/thread handle after
	thread creation.

2001-10-10  Jim Blandy  <jimb@redhat.com>

	* mn10300-tdep.c (mn10300_analyze_prologue): Doc fixes.

2001-10-10  Keith Seitz  <keiths@redhat.com>

	* varobj.c (cplus_value_of_child): Deal with a failure
	to dereference a pointer object.

2001-10-08  J. Brobecker <brobecker@gnat.com>

	* hpux-thread.c: rewrite find_active_thread() and find_tcb()
	to use ptid_t, instead of overloading the thread and the pid
	into the same 32-bit value. Make associated necessary adaptations.